# cpurenderer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: args.cc  args.h  camera.cc  camera.h  image.cc  image.h  main.cc  model.cc  model.h  painter.cc  painter.h
